[gd_scene load_steps=6 format=2]

[ext_resource path="res://Screens/EmptyScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/PausedScreen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Screens/GameOverScreen.tscn" type="PackedScene" id=3]
[ext_resource path="res://Screens/GameScreens.gd" type="Script" id=4]
[ext_resource path="res://Screens/OptionsScreen.tscn" type="PackedScene" id=5]

[node name="GameScreens" type="Node"]
pause_mode = 2
script = ExtResource( 4 )

[node name="EmptyScreen" parent="." instance=ExtResource( 1 )]

[node name="PausedScreen" parent="." instance=ExtResource( 2 )]

[node name="GameOverScreen" parent="." instance=ExtResource( 3 )]

[node name="OptionsScreen" parent="." instance=ExtResource( 5 )]
[connection signal="go_to_empty_screen" from="PausedScreen" to="." method="go_to_empty_screen"]
[connection signal="go_to_options_screen" from="PausedScreen" to="." method="go_to_options_screen"]
[connection signal="quit" from="PausedScreen" to="." method="go_to_title_screen"]
[connection signal="go_to_title_screen" from="GameOverScreen" to="." method="go_to_title_screen"]
[connection signal="go_to_title_screen" from="OptionsScreen" to="." method="go_to_pause_screen"]
